[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmapvibes"
version = "0.1.0"
description = "Messing gmap"
authors = [{name = "MDag"}]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "seaborn",
    "pandas",
    "geopy",
    "bs4",
    "ddgs",
    "requests",
    "sentence-transformers",
]
readme = "README.md"
license = "GPL-3.0-only"

[tool.setuptools.packages.find]
where = ["."]
include = ["gmapvibes*"]
exclude = ["notebooks*"]